create contact page

--- a/src/components/Landing.astro
+++ b/src/components/Landing.astro
@@ -6,7 +6,7 @@
         <h2>Bienvenidos</h2>
         <h1>Archivos gyg</h1>
         <h3>Especialistas en optimizar espacios.</h3>
-        <button>Contáctanos!</button>
+        <a href="/contacto">Contáctanos!</a>
     </div>
 </section>
 
@@ -17,6 +17,23 @@
         justify-content: center;
         width: 100%;
         color: #ffff;
+    }
+    a{  
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-family: "Roboto", sans-serif;
+		width: 150px;
+		height: 40px;
+		color: #425336;
+		background-color: #ffd936;
+		border: none;
+		border-radius: 3px;
+		font-size: .8rem;
+        margin-top: 10px;
+    }
+    a:hover{
+        background-color: #425336;
     }
     .box_landing{
         display: flex;
