--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -7,7 +7,7 @@
     </div>
     <div class="button_nav" >
         <a href="/" >Home</a>
-        <a>Contact</a>
+        <a href="/contacto" >Contact</a>
         <button>+54 9 11 6230-9102</button>
     </div>
 </section>
