--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -3,10 +3,28 @@
 
 <section>
     <h2>Nuestros Servicios</h2>
+    <span/>
+    <article>
+        <div></div>
+        <div></div>
+        <div></div>
+    </article>
 </section>
 
 <style>
     section{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
         width: 100%;
+        height: 50vh;
+    }
+    h2{
+        margin: 0;
+    }
+    article{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
     }
 </style>
