--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -47,9 +47,15 @@ const { title } = Astro.props;
 		padding-top: 10px;
 		height: 50px;
 	}
-	a{
+	a{	
+		cursor: pointer;
 		margin-inline: 5px;
 		text-decoration: none;
+		color: #536942;
+		transition: all ease 200ms;
+	}
+	a:hover{
+		color: #ffd936;
 	}
 	html {
 		font-family: "Lato", sans-serif;
@@ -81,10 +87,13 @@ const { title } = Astro.props;
 		font-family: "Roboto", sans-serif;
 		width: 150px;
 		height: 40px;
-		color: #425336;
-		background-color: #ffd936;
 		border: none;
 		border-radius: 3px;
 		font-size: .8rem;
 	}
+	span{
+        height: 3px;
+        width: 80px;
+        background-color: #fcb900;
+    }
 </style>
