--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Services from '../components/Services.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Archivos gyg">
+<Layout title="Archivos gyg - Especialistas en Optimizar Espacios">
 	<main>
 		<Landing/>
 		<Clients/>
