--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -6,38 +6,53 @@
     <span/>
     <article>
         <div>
-            <img src="../../public/images/almacen-deslizante.webp" alt="almacen-deslizante">
+            <img src="../../images/bases-mobiles.webp" alt="bases-mobiles">
+            <h3>Bases Móviles</h3>
+            <p>Las Bases Móviles son una opción inteligente de adaptación mobiliaria.
+               Porque permite que las estanterías metálicas fijas, llamadas también
+               convencionales, que tenga el cliente, puedan ser montadas sobre las
+               bases móviles. Dándoles incluso mayor seguridad y rigidez. Permitiendo
+               no sólo el desplazamiento y una mayor capacidad de almacenaje, sino
+               también, la posibilidad de agrupar e incorporar más estanterías a futuro.
+               Es una solución significativa, para quienes ya tengan éste tipo de
+               estanterías y necesiten tener mayor capacidad de guardado. Con las Bases
+               móviles se obtiene un ambiente ordenado, eliminando los pasillos innecesarios
+               y riesgosos. Las Bases Móviles se diseñan a medida, según las estanterías
+               fijas que tenga el cliente. Obteniendo el máximo aprovechamiento del espacio
+               disponible. Se deslizan sobre rieles que son fijados al piso. Lo que va a
+               permitir el desplazamiento de las estanterías. Y para ello se le adapta
+               un sistema de manivelas para poder mover las estanterías, sin esfuerzo alguno.
+            </p>
+        </div>
+        <div>
+            <img src="../../images/almacen-deslizante.webp" alt="almacen-deslizante">
             <h3>Mobiliario/Almacén Deslizante</h3>
             <p>Los Mobiliarios/Almacén Deslizantes G&G son diseñados y se proyectan para ser adaptados a distintos accesorios, útiles y necesarios, para aquellos sectores críticos de las empresas e industrias como son los depósitos, pañoles y todo lugar destinado a acumular productos y concentrar Stocks. Brindando una óptima aceleración en los procesos productivos.</p>
         </div>
         <div>
-            <img src="../../public/images/archivos-deslizantes.webp" alt="archivos-deslizantes">
-            <h3>Archivos Deslizante</h3>
-            <p>Los archivos deslizantes G&G permiten adaptarse para cualquier tipo de guardado, brindando eficiencia a la hora de buscar y controlar los archivos.</p>
-        </div>
-        <div>
-            <img src="../../public/images/bases-mobiles.webp" alt="bases-mobiles">
-            <h3>Bases Móviles</h3>
-            <p>Las Bases Móviles son una opción inteligente de adaptación mobiliaria. Porque permite que las estanterías metálicas fijas, llamadas también convencionales, que tenga el cliente, puedan ser montadas sobre las bases móviles. Dándoles incluso mayor seguridad y rigidez. Permitiendo no sólo el desplazamiento y una mayor capacidad de almacenaje, sino también, la posibilidad de agrupar e incorporar más estanterías a futuro. Es una solución significativa, para quienes ya tengan éste tipo de estanterías y necesiten tener mayor capacidad de guardado. Con las Bases móviles se obtiene un ambiente ordenado, eliminando los pasillos innecesarios y riesgosos. Las Bases Móviles se diseñan a medida, según las estanterías fijas que tenga el cliente. Obteniendo el máximo aprovechamiento del espacio disponible. Se deslizan sobre rieles que son fijados al piso. Lo que va a permitir el desplazamiento de las estanterías. Y para ello se le adapta un sistema de manivelas para poder mover las estanterías, sin esfuerzo alguno.</p>
-        </div>
-        <div>
-            <img src="../../public/images/pinacotecas.webp" alt="pinacotecas">
+            <img src="../../images/pinacotecas.webp" alt="pinacotecas">
             <h3>Pinacotecas - Ateliers Deslizante</h3>
             <p>Archivos G&G presenta sus diseños exclusivos en Pinacotecas - Ateliers Deslizantes. Ideales para el guardado y exhibición de cuadros pictóricos. Por su amplia capacidad de guardado, las Pinacotecas Deslizantes son la mejor opción para maximizar los espacios promoviendo una eficiente gestión y conservación de las colecciones. Las Pinacotecas Deslizantes G&G se Diseñan y fabrican a medida. Son fáciles de armar y transportar. Por los beneficios que brindan, las Pinacotecas Deslizantes, son una solución para aquellos que poseen gran cantidad de colecciones y muestras, entre ellas: las galerías de arte, los museos, coleccionistas y particulares en general.</p>
         </div>
         <div>
-            <img src="../../public/images/archivo-deslizante.webp" alt="archivo-deslizante">
+            <img src="../../images/archivo-deslizante.webp" alt="archivo-deslizante">
             <h3>Archivos Deslizante</h3>
             <p>Trabajamos no solamente con medida estándar, sino también realizamos proyectos y Diseños a medidas. Teniendo en cuenta lo que el cliente necesite y quiera guardar, buscando siempre la solución más óptima. Además, por la calidad en su diseño, fabricación y terminación, los archivos deslizantes G&G permiten una excelente performance y mayor confort.</p>
         </div>
         <div>
-            <img src="../../public/images/planeras.webp" alt="planeras">
+            <img src="../../images/archivos-deslizantes.webp" alt="archivos-deslizantes">
+            <h3>Archivos Deslizante</h3>
+            <p>Los archivos deslizantes G&G permiten adaptarse para cualquier tipo de guardado, brindando eficiencia a la hora de buscar y controlar los archivos.</p>
+        </div>
+        <div>
+            <img src="../../images/planeras.webp" alt="planeras">
             <h3>Planeras - Archivadores de Plano</h3>
             <p>“Las Planeras” ó “Archivadores de Planos”, de la línea G&G, se diseñan y fabrican a la medida que lo solicite el cliente. Los mismos son fabricados en chapa doble decapada. Los cajones son deslizantes, funcionan a través de un sistema de guías telescópicas. El frente es de chapa conformada y plegada para su extracción. El Bastidor inferior de base estará construido en caño de sección rectangular. Sus ruedas son de nylon ó poliuretano, permitiendo la movilidad de la planera. Acondicionamiento de los cajones sin esfuerzo, desplazamiento suave y silencioso.</p>
         </div>
     </article>
 </section>
 
+    
 <style>
     section{
         display: flex;
@@ -52,12 +67,17 @@
     article{
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        justify-content: center;
-        width: 90%;
+        margin-top: 30px;
+        margin-bottom: 30px;
+        width: 70%;
         div{
             padding-inline: 10px;
             img{
                 width: 100%;
+                aspect-ratio: 16:9;
+            }
+            p{
+                text-wrap: pretty;
             }
         }
     }
