--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,6 +29,7 @@ const { title } = Astro.props;
 </html>
 <style is:global>
 	:root {
+		background-color: #EEEEEE;
 		--accent: 136, 58, 234;
 		--accent-light: 224, 204, 250;
 		--accent-dark: 49, 10, 101;
@@ -81,8 +82,8 @@ const { title } = Astro.props;
 	}
 	h3{	
 		font-family: "Roboto", sans-serif;
-		font-size: 1rem;
-		font-weight: 300;
+		font-size: 1.2rem;
+		font-weight: 400;
 		font-display: wrap;
 	}
 	p{
