--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Clients from '../components/Clients.astro';
 import Landing from '../components/Landing.astro';
 import Services from '../components/Services.astro';
 import Layout from '../layouts/Layout.astro';
+import About from '../components/About.astro';
 ---
 
 <Layout title="Archivos gyg - Especialistas en Optimizar Espacios">
@@ -10,6 +11,7 @@ import Layout from '../layouts/Layout.astro';
 		<Landing/>
 		<Clients/>
 		<Services/>
+		<About/>
 	</main>
 </Layout>
 
