--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Landing from '../components/Landing.astro';
 import Services from '../components/Services.astro';
 import Layout from '../layouts/Layout.astro';
 import About from '../components/About.astro';
+import Productos from '../components/Productos.astro';
 ---
 
 <Layout title="Archivos gyg - Especialistas en Optimizar Espacios">
@@ -12,6 +13,7 @@ import About from '../components/About.astro';
 		<Clients/>
 		<Services/>
 		<About/>
+		<Productos/>
 	</main>
 </Layout>
 
