--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -25,6 +25,7 @@
         display: flex;
         justify-content: center;
         padding-inline: 10px;
+        margin-top: 30px;
         margin-bottom: 30px;
     }
     section{
