--- a/src/components/Productos.astro
+++ b/src/components/Productos.astro
@@ -3,17 +3,41 @@
 
 <section>
     <div>
-        <h2>Nuestros servicios</h2> 
+        <h2>Nuestros Servicios</h2> 
         <h3>Archivo G&G desarrolla sus productos y sistemas en <br/> diferentes Secciones según la funcionalidad y finalidad de los mismos.</h3>
     </div>
 </section>
 
 <style>
     section{
+        position: relative;
+        z-index: 1;
         display: grid;
         justify-content: center;
         align-content: center;
         text-align: center;
-        height: 70vh;
+        height: 100vh;
+        background-image: url('../../archivos-gyg.gif');
+        background-attachment: fixed;
+        background-position: bottom;
+    }
+    section::after{
+        z-index: 2;
+        content: ' ';
+        position: absolute;
+        width: 100%;
+        height: 100vh;
+        background-color:#bebebe4b;
+    }
+    h2{
+        position: relative;
+        z-index: 3;
+        font-size: 4rem;
+        margin: 0;
+    }
+    h3{
+        position: relative;
+        z-index: 3;
+        margin: 0;
     }
 </style>
