--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -1,8 +1,20 @@
 ---
-
+if(Astro.request.method === "POST"){
+    try {
+        const data = await Astro.request.formData()
+        const name = data.get("name");
+        const phone = data.get("phone");
+        const email = data.get("email"); 
+        const message = data.get("message") 
+        console.log(name,phone,email,message)
+    } catch (error) {
+        
+        console.log(error)
+    }
+}
 ---
 
-<form method="POST">
+<form method="POST" enctype="multipart/form-data" >
     <label>
         Nombre y Apellido:
         <input type="text" name="name">
