--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -11,6 +11,31 @@ const USER_ID = import.meta.env.VITE_USER_ID
     <section>
         <aside>
             <h2>Podés encontrarnos</h2>
+            <h4>EMAIL</h4>
+            <p>contactoarchivosgyg@gmail.com</p>
+            <h4>WHATSAPP</h4>
+            <p>1162309102 / 1132896561</p>
+            <h4>TELEFONO</h4>
+            <p>(011) 2130-1913</p>
+            <a href="https://www.facebook.com/p/Archivos-GyG-100067119882232/"
+               target="_blank"
+               rel="noreferrer"
+               aria-label="Seguinos en Facebook"
+               >
+                <svg width="26"
+                      height="26"  
+                      viewBox="0 0 24 24"  
+                      fill="none"  
+                      stroke="currentColor"  
+                      stroke-width="2"  
+                      stroke-linecap="round"  
+                      stroke-linejoin="round"  
+                      >
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <path d="M12 10.174c1.766 -2.784 3.315 -4.174 4.648 -4.174c2 0 3.263 2.213 4 5.217c.704 2.869 .5 6.783 -2 6.783c-1.114 0 -2.648 -1.565 -4.148 -3.652a27.627 27.627 0 0 1 -2.5 -4.174z" />
+                    <path d="M12 10.174c-1.766 -2.784 -3.315 -4.174 -4.648 -4.174c-2 0 -3.263 2.213 -4 5.217c-.704 2.869 -.5 6.783 2 6.783c1.114 0 2.648 -1.565 4.148 -3.652c1 -1.391 1.833 -2.783 2.5 -4.174z" />
+                </svg>
+            </a>
         </aside>
         <Form client:only
               servisId={SERVICE_ID}
@@ -24,7 +49,23 @@ const USER_ID = import.meta.env.VITE_USER_ID
     section{
         display: flex;  
         justify-content: center;
-        height: 75vh;
+    }
+    h4{
+        margin-bottom: 0;
+    }
+    a{
+        display: grid;
+        justify-content: center;
+        align-items: center;
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        background-color: #fcb900;
+        margin-top: 30px;
+        margin-left: 0;
+    }
+    p{
+        margin: 0;
     }
     aside{
         display: flex;
