--- a/src/components/Clients.astro
+++ b/src/components/Clients.astro
@@ -1,9 +1,12 @@
 ---
+import Slider from "./Slider/Slider";
+
 ---
 
 <section>
     <h2>Quienes confian en nosotros</h2>
     <span/>
+    <Slider client:only />
 </section>
 
 <style>
