--- a/src/components/Landing.astro
+++ b/src/components/Landing.astro
@@ -68,4 +68,11 @@
     button{
         margin-top: 20px;
     }
+    @media
+        (width < 480px){
+            h1{
+                font-size: 4rem;
+                margin-top: 15px;
+            }
+        }
 </style>
