create nav responsive

--- a/src/components/Clients.astro
+++ b/src/components/Clients.astro
@@ -21,4 +21,8 @@ import Slider from "./Slider/Slider";
     h2{
         margin: 0;
     }
+    @media
+        (width < 480px){
+           
+        }
 </style>
