--- a/src/components/Landing.astro
+++ b/src/components/Landing.astro
@@ -12,10 +12,11 @@
 
 <style>
     section{
+        position: relative;
         display: grid;
         justify-content: center;
         align-items: center;
-        margin-top: -100px;
+        margin-top: -110px;
         width: 100%;
         height: 100vh;
         color: #ffff;
@@ -28,7 +29,7 @@
         content: ' ';
         position: absolute;
         width: 100%;
-        height: 100%;
+        height: 100vh;
         background-color:#4b4b4b4b;
     }
     a{  
