responsive nav to tablet

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -61,7 +61,7 @@
         height: 100px;
         background-color: transparent;
     }
-    #menu{
+    #tab{
         display: none;
         color: #425336;
     }
@@ -95,11 +95,11 @@
         height: 90px;
     }
     @media
-        (width < 480px){
+        (width < 900px){
             section{
                 padding: 5px;
             }
-            #menu{
+            #tab{
                 display: flex;
             }
             img{
