--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -47,4 +47,15 @@
         width: 70%;
         text-wrap: pretty;
     }
+    @media
+        (width < 900px){
+            section{
+                display: block;
+                align-items: center;
+                width: 100%;
+            }
+            p{
+                width: 100%;
+            }
+        }
 </style>
