--- a/src/components/Clients.astro
+++ b/src/components/Clients.astro
@@ -23,6 +23,8 @@ import Slider from "./Slider/Slider";
     }
     @media
         (width < 480px){
-           
+            h2{
+                font-size: 1.8rem;
+            }
         }
 </style>
