--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -19,7 +19,7 @@
         <img src='./../../logo-archivos-gyg.webp' alt="logo-archivos-gyg" >
     </div>
     <div>
-        <svg id="tab" width="50"  height="50"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round" ><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 6h16" /><path d="M7 12h13" /><path d="M10 18h10" /></svg>
+        <svg id="tab" width="35"  height="35"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round" ><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 6h16" /><path d="M7 12h13" /><path d="M10 18h10" /></svg>
     </div>
     <div class="button_nav" id="button_nav" >
         <div>
@@ -54,9 +54,7 @@
         position: relative;
         z-index: 3;
         display: flex;
-        justify-content: space-between;
-        padding-left: 5rem;
-        padding-right: 5rem;
+        justify-content: space-around;
         align-items: center;
         height: 100px;
         background-color: transparent;
@@ -103,7 +101,7 @@
                 display: flex;
             }
             img{
-                height: 80px;
+                display: none;
             }
             .button_nav{
                 flex-direction: column;
