--- a/src/components/Productos.astro
+++ b/src/components/Productos.astro
@@ -17,6 +17,7 @@
         align-content: center;
         text-align: center;
         height: 100vh;
+        padding-inline: 5px;
         background-image: url('../../archivos-gyg.gif');
         background-attachment: fixed;
         background-position: bottom;
@@ -40,4 +41,10 @@
         z-index: 3;
         margin: 0;
     }
+    @media
+        (width < 900px){
+            h2{
+                font-size: 1.8rem;
+            }
+        }
 </style>
