--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -27,3 +27,13 @@
     display: block;
     transition: transform 0.5s ease-in-out;
 }
+
+@media
+    (width < 900px){
+        .carousel{
+            width: 100%;
+        }
+        .slide img{
+            width: 70%;
+        }
+    }
