--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -73,7 +73,7 @@ const { title } = Astro.props;
 		align-items: flex-start;
 		border-top: solid 1px #425336;
 		padding-top: 10px;
-		height: 50px;
+		height: 80px;
 	}
 	a{	
 		cursor: pointer;
@@ -119,4 +119,12 @@ const { title } = Astro.props;
         width: 80px;
         background-color: #fcb900;
     }
+	@media
+		(width < 900px){
+			footer{
+				display: block;
+				align-items: center;
+				text-align: center;
+			}
+		}
 </style>
