responsive about and form fixed

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -58,4 +58,15 @@
                 width: 100%;
             }
         }
+    @media
+        (heigth < 1050px) {
+            section{
+                display: block;
+                align-items: center;
+                width: 100%;
+            }
+            p{
+                width: 100%;
+            }
+        }
 </style>
