--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -74,4 +74,10 @@ const USER_ID = import.meta.env.VITE_USER_ID
         width: 30%;
         height: 100%;
     }
+    @media
+        (width < 900px){
+            section{
+                display: block;
+            }
+        }
 </style>
