--- a/src/components/Landing.astro
+++ b/src/components/Landing.astro
@@ -23,6 +23,7 @@
         background-image: url('../../archivos-gyg.gif');
         background-attachment: fixed;
         background-position: bottom;
+        background-repeat: no-repeat;
     }
     section::after{
         z-index: 2;
