--- a/src/components/Productos.astro
+++ b/src/components/Productos.astro
@@ -3,7 +3,7 @@
 
 <section>
     <div>
-        <h2>Nuestros Productos</h2> 
+        <h2>Nuestros Servicios</h2> 
         <h3>Archivo G&G desarrolla sus productos y sistemas en <br/> diferentes Secciones según la funcionalidad y finalidad de los mismos.</h3>
     </div>
 </section>
