image width fixed

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -40,8 +40,8 @@
         margin: 0;
     }
     img{
-        aspect-ratio: 16 / 9;
-        object-fit: cover;
+        width: 400px;
+        max-width: 700px;
     }
     p{
         width: 70%;
