--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -42,6 +42,8 @@
     img{
         width: 400px;
         height: 500px;
+        max-width: 400px;
+        max-height: 500px;
     }
     p{
         width: 70%;
