--- a/src/components/Landing.astro
+++ b/src/components/Landing.astro
@@ -21,6 +21,7 @@
         height: 100vh;
         color: #ffff;
         background-image: url('../../archivos-gyg.gif');
+	background-size:cover;
         background-attachment: fixed;
         background-position: bottom;
         background-repeat: no-repeat;
