--- a/src/components/Productos.astro
+++ b/src/components/Productos.astro
@@ -20,6 +20,7 @@
         padding-inline: 5px;
         background-image: url('../../archivos-gyg.gif');
         background-attachment: fixed;
+        background-size:cover;
         background-position: bottom;
         background-repeat: no-repeat;
     }
